[tool.poetry]
name = "regreg"
version = "0.1.0"
description = "Regressions with arbitrarily complex regularization terms."
license = "MIT"
authors = ["kpj <kim.philipp.jablonski@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kpj/regreg"

[tool.poetry.dependencies]
python = "3.9.0"
tensorflow = "^2.7.0"
tensorflow-probability = "^0.15.0"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
black = "^20.8b1"
pytest = "^6.2.1"
numpy = "^1.22.1"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
