[tool.poetry]
name = "reggy"
version = "0.2.0"
description = "Python package for regularized regressions."
license = "MIT"
authors = ["kpj <kim.philipp.jablonski@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kpj/reggy"

[tool.poetry.dependencies]
python = "~3.9.0"
tensorflow = "^2.9.0"
tensorflow-probability = ">=0.17,<0.19"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
black = "^22.1"
pytest = "^7.0.0"
numpy = "^1.22.1"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
